# reflection

./: .gitignore  CMakeLists.txt  README.md  build_package.ts  bun.lockb  core_compiler.ts  package.json
dependencies/json/include/: .gitignore
dependencies/webview2/include/: .gitignore
dependencies/webview2/lib/: .gitignore
dependencies/wil/include/: .gitignore
src/core/: CMakeLists.txt
src/core/include/core/: webview_browser_api.hpp
src/core/include/core/components/: button.hpp  canvas.hpp  checkbox.hpp  folder_selector.hpp  frame.hpp  image.hpp  input.hpp  label.hpp  list.hpp  selector.hpp  slider.hpp
src/core/include/reflection/: abstract_browser_api.hpp  reflection.hpp  utils.hpp
src/core/include/reflection/component/: abstract_button.hpp  abstract_canvas.hpp  abstract_checkbox.hpp  abstract_component.hpp  abstract_folder_selector.hpp  abstract_frame.hpp  abstract_image.hpp  abstract_input.hpp  abstract_label.hpp  abstract_list.hpp  abstract_selector.hpp  abstract_slider.hpp
src/core/src/: abstract_browser_api.cpp  reflection.cpp  webview_browser_api.cpp
src/core_c_api/: CMakeLists.txt
src/core_c_api/include/reflection/: reflection.h
src/core_c_api/src/: reflection.cpp
src/core_ui/: core_functions.js  core_style.css  core_view.html
src/core_ui/components/button/: layout.html  script.js  style.css
src/core_ui/components/canvas/: layout.html  script.js
src/core_ui/components/checkbox/: layout.html  script.js  style.css
src/core_ui/components/folder_selector/: layout.html  script.js  style.css
src/core_ui/components/frame/: layout.html  script.js  style.css
src/core_ui/components/image/: layout.html  script.js  style.css
src/core_ui/components/input/: layout.html  script.js  style.css
src/core_ui/components/label/: layout.html  script.js  style.css
src/core_ui/components/list/: layout.html  script.js  style.css
src/core_ui/components/selector/: layout.html  script.js  style.css
src/core_ui/components/slider/: layout.html  script.js  style.css
src/example/: CMakeLists.txt
src/example/resources/: resources.rc
src/example/src/: main.cpp
src/ext/: CMakeLists.txt
src/ext/include/ext/: .gitignore
